# automake2

./: Makefile.am  configure.ac  main.c  readme.md
